# mastodon-welcome

./: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
mastodon_welcome/: __init__.py
